new shared project replacing shared classes

--- a/TimeUtil.components/Pages/Index.razor
+++ b/TimeUtil.components/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 @using Microsoft.AspNetCore.Components.Forms
-@using TimeUtil.SharedClasses
+@using TimeUtil.Shared
 @using TimeUtil.BussinesLogic
 
 <PageTitle>Time Utilisation</PageTitle>
