--- a/TimeUtil.components/Shared/DataOutput/EventsTable.razor
+++ b/TimeUtil.components/Shared/DataOutput/EventsTable.razor
@@ -1,4 +1,4 @@
-﻿@using TimeUtil.SharedClasses
+﻿@using TimeUtil.Shared
 
 <MudTable AllowUnsorted="false" RowsPerPage="15" Items="@Events" Hover="true" Breakpoint="Breakpoint.Sm" Filter="FilterEvents">
     <ToolBarContent>
