--- a/TimeUtil.components/Shared/InputForm.razor
+++ b/TimeUtil.components/Shared/InputForm.razor
@@ -36,7 +36,7 @@
         }
     </MudText>
 
-    <InputFile id="fileInput" OnChange="UploadFile" hidden="hidden" />
+    <InputFile accept=".csv" id="fileInput" OnChange="UploadFile" hidden="hidden" />
 
 </MudForm>
 
