--- a/TimeUtil.components/Shared/MainLayout.razor
+++ b/TimeUtil.components/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
         <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
     </MudAppBar>
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Large" Class="mt-5">
+        <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-5">
             <ErrorBoundary @ref="@errorBoundary">
                 <ChildContent>
                     @Body
