--- a/TimeUtil.components/Shared/DataOutput/EventsTable.razor
+++ b/TimeUtil.components/Shared/DataOutput/EventsTable.razor
@@ -1,9 +1,13 @@
 ﻿@using TimeUtil.Shared
 
-<MudTable AllowUnsorted="false" RowsPerPage="25" Items="@Events" Hover="true" Breakpoint="Breakpoint.Sm" Filter="FilterEvents">
+<MudTable AllowUnsorted="false" Striped="true" Dense="true" RowsPerPage="25" Items="@Events" Hover="true" Breakpoint="Breakpoint.Sm" Filter="FilterEvents">
     <ToolBarContent>
         <MudText Typo="Typo.h6">Events</MudText>
         <MudSpacer />
+      @*  <MudDatePicker/>
+        <MudSpacer />
+        <MudDatePicker/>
+        <MudSpacer />*@
         <MudTextField @bind-Value="filterString" Placeholder="Search Event Subject" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0" />
     </ToolBarContent>
     <HeaderContent>
@@ -39,7 +43,7 @@
             <ul>
                 @foreach (string category in context.Categories)
                 {
-                    <li>
+                    <li @key="category">
                         @category
                     </li>
                 }
