--- a/TimeUtil.components/Shared/MainLayout.razor
+++ b/TimeUtil.components/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
     <MudAppBar Elevation="1">
         <MudText Typo="Typo.h5" Class="ml-3">Time Until</MudText>
         <MudSpacer />
-        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+        <MudIconButton Style="color: #fff;" Color="Color.Inherit" Icon="@Icons.Material.Filled.MoreVert" Edge="Edge.End" />
     </MudAppBar>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-5">
