compression and code tidy

--- a/TimeUtil.components/Pages/Index.razor
+++ b/TimeUtil.components/Pages/Index.razor
@@ -40,7 +40,7 @@
         }
         else if (cal is not null)
         {
-            <DataOutputView calendar="@cal" />
+            <DataOutputView Calendar="@cal" />
         }
     </MudItem>
 </MudGrid>
