--- a/TimeUtil.components/Shared/DataOutput/TimeUntilCard.razor
+++ b/TimeUtil.components/Shared/DataOutput/TimeUntilCard.razor
@@ -19,7 +19,7 @@
 
         <MudDivider />
         <MudListItem>
-            Time Utilisation: @Math.Round(Calendar.TimeUtilisationPercentage(targetHours, Events),2)%
+            Time Utilisation: @Math.Round(OutlookCalendar.TimeUtilisationPercentage(targetHours, Events),2)%
         </MudListItem>
     </MudList>
 </MudCard>
